# predictAgent

./: .gitignore  README.md  pyproject.toml
0930-lstm/: combine_preprocessing_reports.py  data_prep_config.yaml  prepare_cell_reports.py  prepare_lstm_data.py  train_lstm.py
config/: default.yaml
docs/: README.md  overview.md  user-guide.md
docs/plans/: 2026-03-11-implementation-plan.md  2026-03-11-production-refactor-design.md
scripts/: download_data.sh
src/predictagent/: cli.py  config.py  exceptions.py  schemas.py
src/predictagent/api/: app.py
src/predictagent/api/routers/: forecast.py
src/predictagent/pipeline/: features.py  ingestor.py  sequencer.py  trainer.py
src/predictagent/registry/: model_registry.py
tests/: conftest.py
tests/integration/: test_api_integration.py  test_pipeline.py
tests/regression/: baseline.json  test_metrics_baseline.py
tests/unit/: test_api.py  test_config.py  test_exceptions.py  test_features.py  test_ingestor.py  test_model_registry.py  test_schemas.py  test_sequencer.py  test_trainer.py
viavi-dataset/raw/: Metric-Description-Unit.csv  README.md  README_Viavi_Dataset.md  sampleCellReports.csv
